Added enum requirement

--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   "require": {
     "yiisoft/yii2": ">=2.0.4",
     "yii2mod/yii2-behaviors": "*",
-    "yii2mod/yii2-editable": "*"
+    "yii2mod/yii2-editable": "*",
+    "yii2mod/yii2-enum": "*"
   },
   "autoload": {
     "psr-4": {
