--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "yiisoft/yii2": ">=2.0.4",
     "yii2mod/yii2-behaviors": "*",
     "yii2mod/yii2-editable": "*",
-    "yii2mod/yii2-enum": "*"
+    "yii2mod/yii2-enum": "*",
+    "asofter/yii2-imperavi-redactor": "*"
   },
   "autoload": {
     "psr-4": {
