--- a/composer.json
+++ b/composer.json
@@ -16,13 +16,14 @@
         }
     ],
     "require": {
-        "php": ">=5.5",
+        "php": ">=5.6",
         "yiisoft/yii2": ">=2.0.8",
         "yii2mod/yii2-behaviors": "*",
         "yii2mod/yii2-enum": "*",
+        "yii2mod/yii2-moderation": "*",
+        "yii2mod/yii2-editable": "*",
         "asofter/yii2-imperavi-redactor": "*",
-        "paulzi/yii2-adjacency-list": "^2.0",
-        "yii2mod/yii2-moderation": "*"
+        "paulzi/yii2-adjacency-list": "^2.0"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~2.0"
